--- a/templates/administration/practice/add_question.html
+++ b/templates/administration/practice/add_question.html
@@ -94,6 +94,22 @@ active
                                         placeholder="Description here..." required></textarea>
                                 </div>
 
+                                <div class="mb-3">
+                                    <label for="job_title" class="form-label">Input Format
+                                        <div class="star">*</div>
+                                    </label>
+                                    <textarea class="form-control" id="input_format" name="input_format" rows="5"
+                                        placeholder="Input format here..." required></textarea>
+                                </div>
+
+                                <div class="mb-3">
+                                    <label for="job_title" class="form-label">Output Format
+                                        <div class="star">*</div>
+                                    </label>
+                                    <textarea class="form-control" id="output_format" name="output_format" rows="5"
+                                        placeholder="Output format here..." required></textarea>
+                                </div>
+
 
                                 <div class="mb-3">
                                     <label for="job_title" class="form-label">Constraints
@@ -102,7 +118,7 @@ active
                                     <textarea class="form-control" id="question_description" name="constraints" rows="5"
                                         placeholder="Description here..." required></textarea>
                                 </div>
-                            
+
 
                                 <div class="mb-3">
                                     <label for="assignment_type" class="form-label">Difficulty Level
