--- a/templates/student/base.html
+++ b/templates/student/base.html
@@ -685,8 +685,7 @@
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
-                    <h4 class="modal-title text-center">Your Current Streak: <strong>{{ streak.current_streak
-                            }}</strong> Days 🔥</h4>
+                    <h4 class="modal-title text-center">Your Current Streak: <strong>{{ streak.current_streak }}</strong> Days 🔥</h4>
                     <p class="text-center mt-3">Streaks are a great way to stay consistent and boost your rewards.
                         Here's how they work:</p>
                     <ul class="mt-3">
