--- a/templates/student/base.html
+++ b/templates/student/base.html
@@ -651,23 +651,25 @@
     <div class="modal fade" id="coinModal" tabindex="-1" aria-labelledby="coinModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered">
             <div class="modal-content">
-                <div class="modal-header">
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <div class="modal-body">
-                    <h4 class="modal-title text-center">You have total <strong>{{ student.coins }} Sparks</strong> <img
-                            width="7%" src="{% static 'img/student/coin.png' %}" alt=""> </h4>
-                    <p class="text-center mt-3">Sparks are a symbol of your coding achievements. Here's how they work:
+                <div class="modal-body mt-2">
+                    <h4 class="modal-title text-center mb-2">You have total <strong>{{ student.coins }} Sparks</strong> <img
+                        width="7%" src="{% static 'img/student/coin.png' %}" alt=""> </h4>
+                    <p class="text-center">Sparks aren’t just coins, they are the badge of your coding achievements! While it’s not real money, it is gonna help you to earn it 😉.
                     </p>
-                    <ul class="mt-3">
-                        <li>🧩 <strong>Solving Coding Challenges:</strong> Earn Sparks based on the complexity of the
-                            challenges.</li>
-                        <li>🔥 <strong>Maintaining Streaks:</strong> Keep solving daily to earn bonus Sparks and grow
+
+                    <ul>
+                        <li><strong>🧩 Complete your Challenges:</strong>  The tougher the challenge, the more Sparks you’ll earn!</li>
+                        <br>
+                        <li><strong>🔥 Build Unstoppable Streaks:</strong> Keep solving daily to earn bonus Sparks and grow
                             your streak.</li>
                     </ul>
                     <p class="text-center mt-3">
-                        Use your Sparks to unlock premium features, redeem exciting rewards, or showcase your coding
-                        journey. Keep stacking up! 💪
+                        Use your sparks to unlock hidden test cases and restore your broken streaks🔥💪
+                    </p>
+                    <p class="text-center mt-3">
+                        <strong>
+                            #AngaarHai
+                        </strong>
                     </p>
                 </div>
                 <div class="modal-footer">
